made 3rd tab invis

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
         </div>
         
       </div>
-      <div id="supernovaMilestones" class="canvas flex-col box-rounded hologram-purple">
+      <div id="supernovaMilestones" class="canvas flex-col box-rounded hologram-purple invisible">
         <div class="info dark">
           <div>Supernova Milestones</div>
           <div id="smilestone1" class="description">1 Supernova - e</div>
